[package]
name = "bls-runtime-wasm"
version = "0.1.0"
authors = ["Blockless Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# rust-sdk = { path = "../crates/rust-sdk" }
bls-common = { path = "../crates/bls-common" }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'TextDecoder',
  'TextEncoder',
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
