[package]
name = "bls-runtime-wasm"
version = "0.1.0"
authors = ["Blockless Developers"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
bls-common = { path = "../crates/bls-common", features = ["use-wasm-bindgen"] }
# # rust-sdk = { path = "../crates/rust-sdk" }

js-sys = "0.3.60"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"

serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
console_error_panic_hook = "0.1.7"

# serde-wasm-bindgen = "0.5.0"

# wasm-bridge = { version = "0.2.2", features = ["wasmtime-wasi", "async", "async-trait"] }

# wasmer = { git = "https://github.com/wasmerio/wasmer", default-features = false, features = ["js", "std"], rev = "ecde2aa8" }
# wasmer-wasi = { git = "https://github.com/wasmerio/wasmer", default-features = false, features = ["js"], rev = "ecde2aa8" }
# wasmer-vfs = { git = "https://github.com/wasmerio/wasmer", default-features = false, features = ["mem-fs"], rev = "ecde2aa8" }
wasmer = { version = "3.1.1", default-features = false, features = ["js", "std"] }
wasmer-wasi = { version = "3.1.1", default-features = false, features = ["js", "wasix"] }
wasmer-vfs = { version = "3.1.1", default-features = false, features = ["mem-fs"] }
wasm-bindgen-downcast = "0.1.1"

# wasmer = { version = "4.2.0", default_features = false, features = [ "js-default" ] }
# wasmer-wasix = { version = "0.13.0", default-features = false, features = ["js-default"] }
# virtual-net = { version = "0.5.0", default-features = false, features = [ "remote" ] }
# virtual-fs = { version = "0.8.0", default-features = false, features = [ "webc-fs" ] }
# wasm-bindgen-downcast = "0.1.1"

# wasmer = { git = "https://github.com/wasmerio/wasmer", branch = "wasmer-js", default_features = false, features = [ "js-default" ] }
# wasmer-wasix = { git = "https://github.com/wasmerio/wasmer", branch = "wasmer-js", default-features = false, features = ["js-default"] }
# wasm-bindgen-downcast = "0.1.1"
# tokio = "1.32.0"
# bytes = "1.5.0"
# futures = "0.3.28"
# oneshot = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'TextDecoder',
  'TextEncoder',
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
