[package]
name = "bls-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-wasm-bindgen"]
use-wasm-bindgen = []

[dependencies]
async-trait = "0.1.73"
reqwest = { version = "0.11.20", default-features = false, features = ["multipart"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_qs = "0.12.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
