[package]
name = "bls-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use-wasm-bindgen"]
use-wasm-bindgen = []

[dependencies]
http = "0.2.9"
reqwest = { version = "0.11.20", default-features = false, features = ["multipart", "json"] }
aws-sigv4 = { git = "https://github.com/blocklessnetwork/aws-sigv4-wasm32", rev = "61dd490d" }
wasm-timer = "0.2.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_qs = "0.12.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
