[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bls-common = { path = "../bls-common", default-features = false }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
